--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "server": "json-server -w ./src/json-server/APIsale.json -p 3001"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
